@@ -13,6 +13,7 @@ if status is-interactive
     alias grep="ugrep"
     alias ggrep="/usr/bin/grep"
     alias icat="kitty +kitten icat"
+    alias doom-emacs="doom emacs"
 
     bat --completion fish | source
 end
