@@ -1,17 +1,0 @@
-[Settings]
-gtk-theme-name=catppuccin-macchiato-mauve-standard+default
-gtk-icon-theme-name=Adwaita
-gtk-font-name=Noto Sans  10
-gtk-cursor-theme-name=catppuccin-macchiato-mauve-cursors
-gtk-cursor-theme-size=25
-gtk-toolbar-style=GTK_TOOLBAR_ICONS
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-button-images=1
-gtk-menu-images=1
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=0
-gtk-xft-antialias=1
-gtk-xft-hinting=1
-gtk-xft-hintstyle=hintslight
-gtk-xft-rgba=rgb
-gtk-application-prefer-dark-theme=1
