@@ -1,1 +1,0 @@
-/usr/share/themes/Colloid-Purple-Dark-Dracula/gtk-4.0/assets
