@@ -1,1 +1,0 @@
-/usr/share/themes/catppuccin-macchiato-mauve-standard+default/gtk-4.0/gtk-dark.css
