@@ -1,7 +1,0 @@
-[Settings]
-gtk-theme-name=catppuccin-macchiato-mauve-standard+default
-gtk-icon-theme-name=Adwaita
-gtk-font-name=Noto Sans  10
-gtk-cursor-theme-name=catppuccin-macchiato-mauve-cursors
-gtk-cursor-theme-size=25
-gtk-application-prefer-dark-theme=1
