@@ -1,4 +1,0 @@
-[Icon Theme]
-Name=Default
-Comment=Default Cursor Theme
-Inherits=Qogir, 25
