@@ -74,4 +74,4 @@ xwayland:force_zero_scaling = true
 ## Plugins config ##
 ####################
 
-source = ~/.config/hypr/plugins.conf
+# source = ~/.config/hypr/plugins.conf
