@@ -1,2 +1,0 @@
-[General]
-theme=catppuccin-mocha-mauve
