@@ -1,32 +1,0 @@
-[Appearance]
-color_scheme_path=/usr/share/qt6ct/colors/catppuccin-macchiato-mauve.conf
-custom_palette=true
-icon_theme=breeze-dark
-standard_dialogs=xdgdesktopportal
-style=Breeze
-
-[Fonts]
-fixed="Sans Serif,9,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
-general="Sans Serif,9,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
-
-[Interface]
-activate_item_on_single_click=1
-buttonbox_layout=2
-cursor_flash_time=1000
-dialog_buttons_have_icons=1
-double_click_interval=400
-gui_effects=@Invalid()
-keyboard_scheme=2
-menus_have_icons=true
-show_shortcuts_in_context_menus=true
-stylesheets=@Invalid()
-toolbutton_style=4
-underline_shortcut=1
-wheel_scroll_lines=3
-
-[SettingsWindow]
-geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x4\x38\0\0\x3\xac\0\0\b,\0\0\0\0\0\0\x4\x38\0\0\x3\xac\0\0\b,\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\x4\x38\0\0\x3\xac\0\0\b,)"
-
-[Troubleshooting]
-force_raster_widgets=1
-ignored_applications=@Invalid()
